crates/solidity/testing/snapshots/bindings_output/control/emit_event/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:7:23]
   │
 7 │         emit TestEvent(x);
   │                       ─┬─  
   │                        ╰─── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     event TestEvent(int id);
   │           ────┬────     ─┬  
   │               ╰───────────── def: 2
   │                          │  
   │                          ╰── def: 3
   │ 
 4 │     function test_emit() public {
   │              ────┬────  
   │                  ╰────── def: 4
 5 │         int x = 1;
   │             ┬  
   │             ╰── def: 5
   │ 
 7 │         emit TestEvent(x);
   │         ──┬─ ────┬────  
   │           ╰───────────── unresolved
   │                  │      
   │                  ╰────── def: 6
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─────▶ contract Test {
 2 │ │ │         event TestEvent(int id);
   │ │ │     ──────────────┬────────┬─────  
   │ │ │                   ╰──────────────── definiens: 2
   │ │ │                            │       
   │ │ │                            ╰─────── definiens: 3
 3 │ │ ╭───▶ 
   ┆ ┆ ┆     
 5 │ │ │ │           int x = 1;
   │ │ │ │   ─────────┬─────────  
   │ │ │ │            ╰─────────── definiens: 5
 6 │ │ │ ╭─▶ 
 7 │ │ │ ├─▶         emit TestEvent(x);
   │ │ │ │                                
   │ │ │ ╰──────────────────────────────── definiens: 6
 8 │ │ ├───▶     }
   │ │ │             
   │ │ ╰───────────── definiens: 4
 9 │ ├─────▶ }
   │ │           
   │ ╰─────────── definiens: 1
───╯
